changes in the base code, new discord functions

--- a/server.cfg
+++ b/server.cfg
@@ -15,3 +15,4 @@ stream_distance 300.0
 stream_rate 1000
 sleep 1
 lagcompmode 1
+discord_bot_token MTE3ODgwODQ2NjExOTM0MDA2Mg.GAdg60.R9N3FRi-t0U1LcX-uu1RsTEMrqGJCQftriqPT8
