--- a/server.cfg
+++ b/server.cfg
@@ -4,7 +4,7 @@ maxplayers 100
 port 7777
 gamemode0 swrp
 filterscripts maps
-plugins crashdetect.dll streamer.dll samp_bcrypt.dll sscanf.dll mysql.dll pawncmd.dll pawnregex.dll pawnraknet.dll MapAndreas.dll PawnPlus.dll YSF.dll SKY.dll
+plugins crashdetect.dll streamer.dll samp_bcrypt.dll sscanf.dll mysql.dll pawncmd.dll pawnregex.dll pawnraknet.dll MapAndreas.dll PawnPlus.dll YSF.dll SKY.dll discord-connector.dll
 announce 1
 query 1
 maxnpc 0
