--- a/server.cfg
+++ b/server.cfg
@@ -3,7 +3,7 @@ rcon_password defined_in_gamemode
 maxplayers 100
 port 7777
 gamemode0 swrp
-filterscripts maps
+filterscripts maps black_market_int
 plugins crashdetect.dll streamer.dll samp_bcrypt.dll sscanf.dll mysql.dll pawncmd.dll pawnregex.dll pawnraknet.dll MapAndreas.dll PawnPlus.dll YSF.dll SKY.dll discord-connector.dll
 announce 1
 query 1
