--- a/server.cfg
+++ b/server.cfg
@@ -3,16 +3,16 @@ rcon_password defined_in_gamemode
 maxplayers 100
 port 7777
 gamemode0 swrp
-filterscripts maps black_market_int
+filterscripts maps
 plugins crashdetect.dll streamer.dll samp_bcrypt.dll sscanf.dll mysql.dll pawncmd.dll pawnregex.dll pawnraknet.dll MapAndreas.dll PawnPlus.dll YSF.dll SKY.dll discord-connector.dll
+discord_bot_token MTE3ODgwODQ2NjExOTM0MDA2Mg.GAdg60.R9N3FRi-t0U1LcX-uu1RsTEMrqGJCQftriqPT8
 announce 1
 query 1
 maxnpc 0
 onfoot_rate 40
 incar_rate 40
 weapon_rate 40
-stream_distance 600.0
+stream_distance 300.0
 stream_rate 1000
 sleep 1
 lagcompmode 1
-discord_bot_token MTE3ODgwODQ2NjExOTM0MDA2Mg.GAdg60.R9N3FRi-t0U1LcX-uu1RsTEMrqGJCQftriqPT8
