inventory, new lspd

--- a/server.cfg
+++ b/server.cfg
@@ -1,4 +1,5 @@
 lanmode 0
+rcon 0
 rcon_password defined_in_gamemode
 maxplayers 100
 port 7777
@@ -15,4 +16,5 @@ weapon_rate 40
 stream_distance 300.0
 stream_rate 1000
 sleep 1
+lagcomp 0
 lagcompmode 1
