--- a/server.cfg
+++ b/server.cfg
@@ -6,7 +6,7 @@ port 7777
 gamemode0 swrp
 filterscripts maps
 plugins crashdetect.dll streamer.dll samp_bcrypt.dll sscanf.dll mysql.dll pawncmd.dll pawnregex.dll pawnraknet.dll MapAndreas.dll PawnPlus.dll YSF.dll SKY.dll discord-connector.dll FakeOnline.dll
-discord_bot_token MTE3ODgwODQ2NjExOTM0MDA2Mg.GAdg60.R9N3FRi-t0U1LcX-uu1RsTEMrqGJCQftriqPT8
+discord_bot_token MTE3ODgwODQ2NjExOTM0MDA2Mg.G6zsE8.IKNM3qIZOnboNjHnGg3Hx-oOWI31Iek7fZE_LQ
 announce 1
 query 1
 maxnpc 0
