--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,60 +1,43 @@
 {
 	"version": "2.0.0",
-	"tasks": 
-	[
+	"tasks": [
 		{
-			"label": "Gamemode Principal",
+			"label": "build-amx",
 			"type": "shell",
 			"command": "${workspaceRoot}/pawno/pawncc.exe",
-			"args": ["swrp.pwn", "--%", "-Dgamemodes", "-;+", "-(+", "-d3"],
-			"group": 
-			{
+			"runOptions": {
+				"instanceLimit": 1
+			},
+			"args": [
+				"${workspaceRoot}\\gamemodes\\main.pwn",
+				"-Dgamemodes",
+				"'-(+'",
+				"'-;+'",
+				"'-d3'"
+			],
+			"group": {
 				"kind": "build",
 				"isDefault": true
 			},
 			"isBackground": false,
-			"presentation": 
-			{
-				"reveal": "silent",
+			"presentation": {
+				"reveal": "always",
 				"panel": "dedicated"
 			},
-			"problemMatcher": "$pawncc"
-		},
-		{
-			"label": "Mapeos Principales",
-			"type": "shell",
-			"command": "${workspaceRoot}/pawno/pawncc.exe",
-			"args": ["maps.pwn", "--%", "-Dfilterscripts", "-;+", "-(+", "-d3"],
-			"group": 
-			{
-				"kind": "build",
-				"isDefault": true
-			},
-			"isBackground": false,
-			"presentation": 
-			{
-				"reveal": "silent",
-				"panel": "dedicated"
-			},
-			"problemMatcher": "$pawncc"
-		},
-		{
-			"label": "Archivo Actual",
-			"type": "shell",
-			"command": "${workspaceRoot}/pawno/pawncc.exe",
-			"args": ["${file}", "--%", "-Dgamemodes", "-;+", "-(+", "-d3"],
-			"group": 
-			{
-				"kind": "build",
-				"isDefault": true
-			},
-			"isBackground": false,
-			"presentation": 
-			{
-				"reveal": "silent",
-				"panel": "dedicated"
-			},
-			"problemMatcher": "$pawncc"
+			"problemMatcher": {
+				"owner": "pawn",
+				"fileLocation": [
+					"relative",
+					"${workspaceRoot}"
+				],
+				"pattern": {
+					"regexp": "^(.*?)\\(([0-9]*)[- 0-9]*\\) \\: (fatal error|error|warning) [0-9]*\\: (.*)$",
+					"file": 1,
+					"location": 2,
+					"severity": 3,
+					"message": 4
+				}
+			}
 		}
 	]
 }
