--- a/server.cfg
+++ b/server.cfg
@@ -3,10 +3,10 @@ rcon 0
 rcon_password defined_in_gamemode
 maxplayers 100
 port 7777
-gamemode0 swrp
+gamemode0 main
 filterscripts maps
 plugins crashdetect.dll streamer.dll samp_bcrypt.dll sscanf.dll mysql.dll pawncmd.dll pawnregex.dll pawnraknet.dll MapAndreas.dll PawnPlus.dll YSF.dll SKY.dll discord-connector.dll FakeOnline.dll
-discord_bot_token MTE3ODgwODQ2NjExOTM0MDA2Mg.G6zsE8.IKNM3qIZOnboNjHnGg3Hx-oOWI31Iek7fZE_LQ
+discord_bot_token 0
 announce 1
 query 1
 maxnpc 0
